Fix: Ensure edit admonitions are wrapped correctly
- Update edit regex to allow for edits without dates
- Add tests for new edit functionality
- Fix quote icon: it was upside down 🤕

--- a/quartz/styles/callouts.scss
+++ b/quartz/styles/callouts.scss
@@ -126,7 +126,7 @@
   }
 
   &[data-callout="quote"] .callout-icon {
-    transform: scale(-1, 1); // Flip across the y-axis
+    transform: scale(-1, -1); // Flip across the y-axis
     margin-right: calc(0.5 * $baseMargin);
   }
 
